WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130739
[WK2] Schemes registered as cache partitioned are not properly registered in new web processes
https://bugs.webkit.org/show_bug.cgi?id=130739
Summary
[WK2] Schemes registered as cache partitioned are not properly registered in ...
Vicki Pfau
Reported
2014-03-25 14:16:04 PDT
When registering a scheme as cache partitioned, new web processes do not properly pick up the fact that the scheme was registered.
Attachments
Patch
(1.38 KB, patch)
2014-03-25 14:20 PDT
,
Vicki Pfau
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vicki Pfau
Comment 1
2014-03-25 14:20:07 PDT
Created
attachment 227796
[details]
Patch
Vicki Pfau
Comment 2
2014-03-25 14:29:18 PDT
<
rdar://problem/16424080
>
Vicki Pfau
Comment 3
2014-03-25 14:53:49 PDT
Committed
r166258
: <
http://trac.webkit.org/changeset/166258
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug