[WK2] Schemes registered as cache partitioned are not properly registered in new web processes https://bugs.webkit.org/show_bug.cgi?id=130739

Reviewed by Anders Carlsson.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):

Canonical link: https://commits.webkit.org/148780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166258 268f45cc-cd09-0410-ab3c-d52691b4dbfc